--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -517,9 +517,11 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
 .ms-container .ms-selectable ul.ms-list li span{
     display: table-cell;
     width: 298px;
+    vertical-align: middle;
 }
 .ms-container .ms-selectable ul.ms-list li i.icon-ok {
     display: table-cell;
+    vertical-align: middle;
 }
 /* Rechte Box ("gewählt") */
 .ms-container .ms-selection ul.ms-list li {
@@ -532,13 +534,16 @@ input.m-wrap, button.m-wrap, select.m-wrap, textarea.m-wrap{
     display: table-cell;
     width: 262px;
     padding-left: 10px;
+    vertical-align: middle;
 }
 .ms-container .ms-selection ul.ms-list li i.icon-ok {
     display: table-cell;
+    vertical-align: middle;
 }
 .ms-container .ms-selection ul.ms-list li i.icon-remove {
     display: table-cell;
     margin-left: 0;
+    vertical-align: middle;
 }
 
 
