--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
@@ -1,13 +1,13 @@
-﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdBeauftragungViewModel
+﻿
 
 <div class="alert alert-success">
-    <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.WeReceivedYourOrder! @Localize.ACocOrderTeamMemberWillContactYou</span>
+    <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.WeReceivedYourOrder! @Localize.AEsdOrderTeamMemberWillContactYou</span>
 </div>
 
 <div class="form-horizontal">
 
     <div class="form-actions">
-        <button class="btn green button-restart" onclick="location.reload();">@Localize.RequestNextCoc <i class="m-icon-swapright m-icon-white"></i></button>
+        <button class="btn green button-restart" onclick="location.reload();">@Localize.NewProcess <i class="m-icon-swapright m-icon-white"></i></button>
     </div>
 
 </div>
