model validation + email delivery issues

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
@@ -193,7 +193,7 @@
 
     <svg id="europe-svg" height="542.6089315691006" version="1.1" width="750px" xmlns="http://www.w3.org/2000/svg" viewBox="341.90774666666664 46.4 131.73333333333332 141.33333333333334" preserveAspectRatio="xMinYMin"></svg>
 
-    <button id="country-others" onclick="return ShowDetailsForm('');" class="btn blue">@Localize.CountryNotListed</button>
+    <button id="country-others" onclick="return ShowDetailsForm('-');" class="btn blue">@Localize.CountryNotListed</button>
 
 </div>
 
