--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/Receipt.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 <div class="alert alert-success">
-    <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.WeReceivedYourOrder! @Localize.AEsdOrderTeamMemberWillContactYou</span>
+    <i class="icon-check"></i><span class="padding-left-5"><strong>@Localize.ThankYou</strong>, @Localize.WeReceivedYourOrder.ToFirstLower()! @Localize.AEsdOrderTeamMemberWillContactYou</span>
 </div>
 
 <div class="form-horizontal">
