--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
@@ -91,7 +91,27 @@
         fill: #6E8CBF;
         cursor: pointer;
     }
-
+    
+    .control-group .controls select {
+        vertical-align: top;
+    }
+    #land-icon {
+        display: inline-block;
+        cursor: pointer;
+    }
+    #land-icon i {
+        display: table-cell;
+        vertical-align: middle;
+        width: 32px;
+        height: 32px;
+        background: center center no-repeat;
+        background-size: 40px 54px;
+        border-radius: 50%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.03)!important;
+    }
 </style>
 
 
