--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/Partial/FormKopf.cshtml
@@ -187,6 +187,9 @@
                     if (!CountryIsEnabled(elem))
                         return;
 
+                    countryHintVisible = false;
+                    $(".country-hint").hide();
+
                     ShowDetailsForm(node.attr("dataid"));
 
                 });
