--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
@@ -2,21 +2,20 @@
 @model FloorcheckViewModel
 
 <div id="divFloorcheckSuche">
-    @using (Ajax.BeginForm("LoadFloorcheckHaendler", "Fahrzeuge", null,
-        new MvcAjaxOptions("divFloorcheckSuche") { OnComplete = "ShowFloorcheckHaendler();" }, new { id = "FloorcheckForm" } ))
+    @using (Ajax.BeginForm("LoadFloorcheck", "Fahrzeuge", null,
+        new MvcAjaxOptions("divFloorcheckSuche") { OnComplete = "ShowFloorcheck();" }, new { id = "FloorcheckForm" } ))
     {    
         <div class="form-horizontal label-width-200" id="searchForm">
 
             @Html.ValidationSummary()
-                                
-            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap uppercase", col = "left" })
+
+            @Html.FormDropDownListFor(m => m.FloorcheckHaendler.HaendlerNummer, FloorcheckViewModel.FloorcheckHaendlerSelectItems, new { @class = "m-wrap", col = "left" })
             @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerName, new { @class = "m-wrap uppercase", col = "right" })
 
-            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap uppercase", col = "left" })
-            @Html.FormDropDownListFor(m => m.FloorcheckHaendler.HaendlerNummer, FloorcheckViewModel.FloorcheckHaendlerSelectItems, new { @class = "m-wrap", col = "right" })
-
-            
-
+            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap uppercase", col = "left" })                                            
+            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap uppercase", col = "right" })
+           
+                      
             <div class="form-actions">
                 <button type="submit" class='btn blue'><i class='icon-search'></i>&nbsp;@Localize.SearchAsVerb</button>
             </div>
