ITA 8616 v2, first draft

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Esd/AuslandsBeauftragung.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CkgDomainLogic.Autohaus.ViewModels.EsdBeauftragungViewModel
 
-<h3 class="page-title" id="headerTitle">@Localize.Autohaus_EsdAnforderung <small></small></h3>
+<h3 class="page-title" id="headerTitle">@Localize.Autohaus_EsdAnforderungPageTitle <small></small></h3>
 
 <div id="divKopf">
     @Html.Partial("Partial/FormKopf", Model)
