--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
@@ -9,17 +9,26 @@
 
             @Html.ValidationSummary()
           
-            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap uppercase" })
-            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerName, new { @class = "m-wrap uppercase" })
-            @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap uppercase" })                                            
-                                             
-            <div class="form-actions">
-                <button type="submit" class='btn blue'><i class='icon-search'></i>&nbsp;@Localize.Continue</button>
+            <div id="search1">
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap uppercase" })
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerName, new { @class = "m-wrap uppercase" })
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap uppercase" })
             </div>
-        </div>  
+            <div id="search2" class="hide">
+                @*<p>Bitte wählen Sie eine Händler aus.</p>*@
+
+                @Html.FormDropDownListFor(m => m.FloorcheckHaendler.SelectedHaendlerNummer, FloorcheckViewModel.FloorcheckHaendlerSelectItems, new { @class = "m-wrap" })
+            </div>
+
+            <div class="form-actions">
+                <button id="btnback" type="button" class="btn hide" onclick="ShowPreviousSearchForm();">@Localize.Back</button>    
+               <button type="submit" class='btn blue'><i class='icon-search'></i>&nbsp;@Localize.Continue</button>
+            </div>
+            </div>  
         
         <script type="text/javascript">
             _modelStateValid = '@ViewContext.ViewData.ModelState.IsValid.ToString().ToLower()';
+            _appStateGridData = @(Model.FloorchecksFiltered.Count());
         </script>
     }
 </div>
