--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche2.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche2.cshtml
@@ -11,8 +11,8 @@
 
             @Html.FormDropDownListFor(m => m.FloorcheckHaendler.HaendlerNummer, FloorcheckViewModel.FloorcheckHaendlerSelectItems, new { @class = "m-wrap"})
                                                                
-            <div class="form-actions">               
-                <button class='btn green'><i class='icon-back' onclick="ShowSearchForm()"></i>&nbsp;@Localize.Back</button>    
+            <div class="form-actions">                            
+                <button type="button" class="btn" onclick="ShowPreviousSearchForm();">@Localize.Back</button>    
                 <button type="submit" class='btn blue'><i class='icon-search'></i>&nbsp;@Localize.SearchAsVerb</button>
             </div>
         </div>  
@@ -22,4 +22,3 @@
         </script>
     }
 </div>
-
