--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen.cshtml
@@ -103,6 +103,8 @@
                     $.magnificPopup.open({
                         items: { src: $("#StornoDialog") },
                         type: 'inline',
+                        showCloseBtn: false,
+                        closeOnBgClick: false,
                         alignTop: true,
                         removalDelay: 300,
                         mainClass: 'my-mfp-zoom-in'
