--- a/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/StornoDialogForm.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/ZldPartner/DurchzufuehrendeZulassungen/StornoDialogForm.cshtml
@@ -27,9 +27,9 @@
         
         @Html.FormRequiredFieldsSummary()
         
-        <div class="form-actions">
+        <div class="form-actions no-bottom-margin">
             <button type="submit" class="btn green"><i class="icon-ok"></i> @Localize.OK</button>
-            <button type="button" class="btn" onclick="AjaxFormStornoDialogClose();">@Localize.Cancel</button>
+            @*<button type="button" class="btn" onclick="AjaxFormStornoDialogClose();">@Localize.Cancel</button>*@
         </div>
         
         <script type="text/javascript">
