--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrzeuge/Floorcheck/FloorcheckSuche.cshtml
@@ -10,9 +10,9 @@
             @Html.ValidationSummary()
           
             <div id="search1">
-                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap uppercase" })
-                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerName, new { @class = "m-wrap uppercase" })
-                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap uppercase" })
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerNummer, new { @class = "m-wrap" })
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerName, new { @class = "m-wrap" })
+                @Html.FormTextBoxFor(m => m.FloorcheckHaendler.HaendlerOrt, new { @class = "m-wrap" })
             </div>
             <div id="search2" class="hide">
                 @*<p>Bitte wählen Sie eine Händler aus.</p>*@
