ita8686 first approach

--- a/inetpub/wwwroot/ServicesMvc/Views/Fahrer/FotoUpload.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Fahrer/FotoUpload.cshtml
@@ -172,6 +172,7 @@
         });
     }
 
+    // TODO -> failed upload (.exe) anzeigen
     function InitUploadControl() {
         'use strict';
         // Change this to the location of your server-side upload handler:
