--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Styles.cshtml
@@ -8,12 +8,12 @@
 <meta content="" name="author" />
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
 <link href="~/assets/plugins/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-<link href="~/assets/plugins/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" type="text/css"/>
+<link href="~/assets/plugins/bootstrap/css/bootstrap-responsive.css?v=20160219_1300" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" type="text/css" href="~/assets/plugins/bootstrap-fileupload/bootstrap-fileupload.css" />
-<link href="~/assets/plugins/font-awesome/css/font-awesome.min.css?v=20150824" rel="stylesheet" type="text/css"/>
+<link href="~/assets/plugins/font-awesome/css/font-awesome.css?v=20160129_0830" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style-metro.css" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/style.css?v=20150901_1334" rel="stylesheet" type="text/css"/>
-<link href="~/assets/css/style-responsive.css" rel="stylesheet" type="text/css"/>
+<link href="~/assets/css/style-responsive.css?v=20160219_1300" rel="stylesheet" type="text/css"/>
 <link href="~/assets/css/themes/default.css" rel="stylesheet" type="text/css" id="style_color"/>
 <link href="~/assets/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css"/>
 <!-- END GLOBAL MANDATORY STYLES -->
